# simple-crewai

./: .env.example  README.md  pyproject.toml
src/bd_crew/: crew.py  main.py
src/bd_crew/config/: agents.yaml  tasks.yaml
