[project]
name = "simple-crewai"
version = "0.1.0"
description = ""
authors = [
    {name = "ernestng11",email = "ernestng11@gmail.com"}
]
readme = "README.md"
requires-python = "3.13"
dependencies = [
    "crewai (>=0.134.0,<0.135.0)",
    "crewai-tools (>=0.48.0,<0.49.0)"
]

[tool.poetry]
packages = [{include = "bd_crew", from = "src"}]

[tool.poetry.scripts]
bd_crew = "bd_crew.main:run"
train = "bd_crew.main:train"
run_crew = "bd_crew.main:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
